# agentic_coding_client

./: .instructions.md  CMakeLists.txt  README.md  REQUIREMENTS.md  setup-dev-environment.skill.md
agent/: .agent.md  README.md  scrum_master.agent.md
agent/reference/: reference_agent.md
agent/scripts/: setup_env.sh  setup_vcpkg.sh
agent/skills/: scrum.skill.md  setup.skill.md
backlog/: PRODUCT_BACKLOG.md  README.md  sprint-1-backlog.md  sprint-template.md
examples/: rtsp_demo.cpp
include/: rtsp_client.h
reports/: sprint-1-report.md
src/: rtsp_client.cpp
tests/: test_rtsp.cpp
