cmake_minimum_required(VERSION 3.16)
project(agentic_client LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

option(USE_OPENCV "Enable OpenCV support" ON)

if(USE_OPENCV)
  find_package(OpenCV QUIET)
  if(OpenCV_FOUND)
    message(STATUS "Found OpenCV ${OpenCV_VERSION}")
    add_definitions(-DHAS_OPENCV)
  else()
    message(WARNING "OpenCV not found. Build will succeed but rtsp demo will be disabled at runtime.")
  endif()
endif()

add_library(rtsp_client src/rtsp_client.cpp)
target_include_directories(rtsp_client PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
if(OpenCV_FOUND)
  target_link_libraries(rtsp_client PUBLIC ${OpenCV_LIBS})
endif()

add_executable(rtsp_demo examples/rtsp_demo.cpp)
target_link_libraries(rtsp_demo PRIVATE rtsp_client)
if(OpenCV_FOUND)
  target_link_libraries(rtsp_demo PRIVATE ${OpenCV_LIBS})
endif()

enable_testing()
find_package(GTest QUIET)
if(GTest_FOUND)
  add_executable(tests tests/test_rtsp.cpp)
  target_link_libraries(tests PRIVATE rtsp_client GTest::gtest_main)
  include(GoogleTest)
  gtest_discover_tests(tests)
else()
  message(WARNING "GoogleTest not found; unit tests will be unavailable.")
endif()
